Limpieza inicial con sonar,  creado dockerfile